[package]
name = "spartan"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "~1", features = ["derive"] }
rand_core = "~0.3"
rand_os = "~0.1"
typenum = "~1.10"
generic-array = "~0.13"
digest = "~0.8"
sha2 = "~0.8"
subtle = "~2.1"
curve25519-dalek = { version = "~1.1", features = ["serde"] }
byteorder = "~1.3"
